--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -70,6 +70,14 @@
       }
     }
 
+    &__weekNumbersLabel {
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: .75em;
+      padding: .5em;
+    }
+
     &__weekNumbers {
       font-weight: bold;
 
